--- a/more/index.html
+++ b/more/index.html
@@ -28,14 +28,14 @@
       <br><b>Travel</b><br>
       <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
       <nav style="display:inline-block;">
-        <b style="margin-left: 50px; font-size: 17px;">Countries Visited (UN+) [25/265]</b><br>
+        <b style="margin-left: 50px; font-size: 17px;">Countries Visited (UN+) [26/265]</b><br>
         <ul style="margin-left: 50px; padding: 0; border: 1px black solid; border-radius: 5px;">
           <input type="checkbox" id="country28" name="country28" value="Hong Kong" onclick="return false;">
           <label for="country28" style="color: gray; text-decoration: line-through;"> Hong Kong</label><br>
           <input type="checkbox" id="country27" name="country27" value="Mongolia" onclick="return false;">
           <label for="country27" style="color: gray; text-decoration: line-through;"> Mongolia</label><br>
-          <input type="checkbox" id="country26" name="country26" value="Belize" onclick="return false;">
-          <label for="country26" style="color: gray; text-decoration: line-through;"> Belize</label><br>
+          <input type="checkbox" id="country26" name="country26" value="Belize (2025)" checked onclick="return false;">
+          <label for="country26"> Belize (2025)</label><br>
           <input type="checkbox" id="country25" name="country25" value="Guatemala (2025)" checked onclick="return false;">
           <label for="country25"> Guatemala (2025)</label><br>
           <input type="checkbox" id="country24" name="country24" value="Curaçao (2025)" checked onclick="return false;">
@@ -88,8 +88,8 @@
           <label for="country1"> United States (2002)</label><br>
         </ul>
         <script>
-          const country25 = document.getElementById('country25');
-          country25.scrollIntoView();
+          const country26 = document.getElementById('country26');
+          country26.scrollIntoView();
         </script>
       </nav>
       <br><b>Mashups</b><br>
@@ -185,19 +185,19 @@
         }
       </script>
       <section id="playlists-standard">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3o4ydgEfTYHTXLYyRTUIF1?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1pl31ZgJqBogUxOHxysP4X?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0I8gTF92rMETGjRRuXr4uD?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3N8ZflxrGFWlvESHiBiwm9?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0bCPF2hlB9y7ZVnT2MM8xN?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/04vdYTNHZgk3MKPTaTOpo7?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7bc4JjxJ45LOUxko5Nupbg?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6uNVuiO9zVMwuhoFnhHmif?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4Ijmg8ptwQZTt7JAsiAjHd?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0UelSCpbuaYFsxlXbx4v21?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3rxyXXHi6TYq6PvQn8Zohc?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0mj3RuYHbDhE6RQf4TI2Dz?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ZWNZN1FO4eN4DrnTfNrjW?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/3o4ydgEfTYHTXLYyRTUIF1?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/1pl31ZgJqBogUxOHxysP4X?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0I8gTF92rMETGjRRuXr4uD?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/3N8ZflxrGFWlvESHiBiwm9?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0bCPF2hlB9y7ZVnT2MM8xN?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/04vdYTNHZgk3MKPTaTOpo7?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/7bc4JjxJ45LOUxko5Nupbg?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6uNVuiO9zVMwuhoFnhHmif?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/4Ijmg8ptwQZTt7JAsiAjHd?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0UelSCpbuaYFsxlXbx4v21?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/3rxyXXHi6TYq6PvQn8Zohc?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0mj3RuYHbDhE6RQf4TI2Dz?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/2ZWNZN1FO4eN4DrnTfNrjW?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </section>
       <button onclick="toggle2(this)" style="width: 100%; text-align: left;">▼ Music Scenes</button>
       <script>
@@ -214,13 +214,13 @@
         }
       </script>
       <section id="music-scenes">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1Ekxw7if0qGhhbT5nQGLow?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
-        <div style="border-radius:12px; background-color:gray; margin-bottom: 10px;" width="100%" height="152px">Puerto Rico (Nov 2024) [under review] </div>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lcj5sAwvVtvf8iG6X8xbH?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2xs7r1VIY1yPouc8oANdDI?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0vcATYhx9mgjUyx6dpdsgK?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0kVolC8lv7i7nxAlYNV2r9?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6G3cTgvep3FFL7sRwEmT9I?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/1Ekxw7if0qGhhbT5nQGLow?utm_source=generator"frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
+        <div class="playlist-ph">Puerto Rico (Nov 2024) [under review]</div>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/4lcj5sAwvVtvf8iG6X8xbH?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/2xs7r1VIY1yPouc8oANdDI?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0vcATYhx9mgjUyx6dpdsgK?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0kVolC8lv7i7nxAlYNV2r9?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6G3cTgvep3FFL7sRwEmT9I?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </section>
       <button onclick="toggle3(this)" style="width: 100%; text-align: left;">▼ World Traveler</button>
       <script>
@@ -237,11 +237,11 @@
         }
       </script>
       <section id="world-traveler">
-        <div style="border-radius:12px; background-color:gray; margin-bottom: 10px;" width="100%" height="152px">MusicMania [WIP] </div>
-        <div style="border-radius:12px; background-color:gray; margin-bottom: 10px;" width="100%" height="152px">Musicmaxxing [WIP] </div>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2CNXYfH9YLvyFPuetTX9nH?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0w2HrNALP69TFB9jY0nlGX?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5cToUH4ABFrzimPRPqKyoW?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <div class="playlist-ph">MusicMania [WIP]</div>
+        <div class="playlist-ph">Musicmaxxing [WIP]</div>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/2CNXYfH9YLvyFPuetTX9nH?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0w2HrNALP69TFB9jY0nlGX?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/5cToUH4ABFrzimPRPqKyoW?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </section>
     </main>
     <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
