--- a/more/index.html
+++ b/more/index.html
@@ -214,6 +214,8 @@
         }
       </script>
       <section id="music-scenes">
+        <div class="playlist-ph">Belize (May 2025) [in progress]</div>
+        <div class="playlist-ph">Guatemala (May 2025) [under review]</div>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0kVolC8lv7i7nxAlYNV2r9?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0UdXmyQy0FIpXOGqM4RsKr?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6aVnQezk8KhQ1YpzcJJc3o?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
