--- a/more/index.html
+++ b/more/index.html
@@ -170,7 +170,7 @@
         }
       </script>
       <br><br><b>Playlists</b><br>
-      <button onclick="toggle(this)" style="width: 100%; text-align: left;">▼ Standard Playlists</button>
+      <button class="toggle" onclick="toggle(this)">▼ Standard Playlists</button>
       <script>
         let toggle = button => {
           let element = document.getElementById("playlists-standard");
@@ -199,7 +199,7 @@
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0mj3RuYHbDhE6RQf4TI2Dz?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/2ZWNZN1FO4eN4DrnTfNrjW?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </section>
-      <button onclick="toggle2(this)" style="width: 100%; text-align: left;">▼ Music Scenes</button>
+      <button class="toggle" onclick="toggle2(this)">▼ Music Scenes</button>
       <script>
         let toggle2 = button => {
           let element = document.getElementById("music-scenes");
@@ -226,7 +226,7 @@
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6G3cTgvep3FFL7sRwEmT9I?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/2xs7r1VIY1yPouc8oANdDI?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </section>
-      <button onclick="toggle3(this)" style="width: 100%; text-align: left;">▼ World Traveler</button>
+      <button class="toggle" onclick="toggle3(this)">▼ World Traveler</button>
       <script>
         let toggle3 = button => {
           let element = document.getElementById("world-traveler");
