Added upcoming countries

--- a/more/index.html
+++ b/more/index.html
@@ -30,6 +30,14 @@
       <nav style="display:inline-block;">
         <b style="margin-left: 50px; font-size: 17px;">Countries Visited (UN+) [26/265]</b><br>
         <ul style="margin-left: 50px; padding: 0; border: 1px black solid; border-radius: 5px;">
+          <input type="checkbox" id="country32" name="country32" value="Uruguay" onclick="return false;">
+          <label for="country32" style="color: gray; text-decoration: line-through;"> Uruguay</label><br>
+          <input type="checkbox" id="country31" name="country31" value="Argentina" onclick="return false;">
+          <label for="country31" style="color: gray; text-decoration: line-through;"> Argentina</label><br>
+          <input type="checkbox" id="country30" name="country30" value="Chile" onclick="return false;">
+          <label for="country30" style="color: gray; text-decoration: line-through;"> Chile</label><br>
+          <input type="checkbox" id="country29" name="country29" value="South Korea" onclick="return false;">
+          <label for="country29" style="color: gray; text-decoration: line-through;"> South Korea</label><br>
           <input type="checkbox" id="country28" name="country28" value="Hong Kong" onclick="return false;">
           <label for="country28" style="color: gray; text-decoration: line-through;"> Hong Kong</label><br>
           <input type="checkbox" id="country27" name="country27" value="Mongolia" onclick="return false;">
