Made unfinished playlists public

--- a/more/index.html
+++ b/more/index.html
@@ -224,13 +224,13 @@
         }
       </script>
       <section id="music-scenes">
-        <div class="playlist-ph">Belize (May 2025) [in progress]</div>
-        <div class="playlist-ph">Guatemala (May 2025) [under review]</div>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/3UfkkePM1t6CLqcQmOtqfr?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6qHHYezKYM8Kotr5ZARhyP?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0kVolC8lv7i7nxAlYNV2r9?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0UdXmyQy0FIpXOGqM4RsKr?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6aVnQezk8KhQ1YpzcJJc3o?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/26mXSSR0g0DUdvdPSdNhgn?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <div class="playlist-ph">Puerto Rico (Nov 2024) [under review]</div>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6WJMgNLf4eVkQpIEHDPbvA?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/4lcj5sAwvVtvf8iG6X8xbH?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0vcATYhx9mgjUyx6dpdsgK?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6G3cTgvep3FFL7sRwEmT9I?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -252,8 +252,8 @@
         }
       </script>
       <section id="world-traveler">
-        <div class="playlist-ph">MusicMania [WIP]</div>
-        <div class="playlist-ph">Musicmaxxing [WIP]</div>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6mJ1B9OqIdWUr3NfLFsAgP?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe class="playlist" src="https://open.spotify.com/embed/playlist/6aZxdXCx4MWphhTgaPXo92?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/2CNXYfH9YLvyFPuetTX9nH?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/0w2HrNALP69TFB9jY0nlGX?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe class="playlist" src="https://open.spotify.com/embed/playlist/5cToUH4ABFrzimPRPqKyoW?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
