Fixed display of mashups

--- a/more/index.html
+++ b/more/index.html
@@ -101,60 +101,59 @@
         </script>
       </nav>
       <br><b>Mashups</b><br>
-      <div style="display: inline-block; vertical-align: top;">
+      <div class="mashup">
         <a href="https://youtu.be/jt7dtCIIqEk" target="_blank"><img src="./images/bon-impala.png" class="thumbnail"></a>
         <p style="margin: 0;">Bon Impala - Breathe, Ma</p>
         <p style="font-size: 12px; margin-top: 7px;">Bon Iver - "Hey, Ma" +<br>Tame Impala - "Breathe Deeper"</p>
       </div>
-      <div style="display: inline-block;">
+      <div class="mashup">
         <a href="https://youtu.be/HnVIt2BSYRs" target="_blank"><img src="./images/chili.png" class="thumbnail"></a>
         <p style="margin: 0;">Chili</p>
         <p style="font-size: 12px; margin-top: 7px;">Black Eyed Peas - "Let's Get It Started" +<br>Red Hot Chili Peppers - "Californication" +<br>Spice Girls - "Wannabe" +<br>Black Eyed Peas - "MAMACITA"</p>
       </div>
-      <div style="display: inline-block; vertical-align: top;">
+      <div class="mashup">
         <a href="https://youtu.be/yW5dh3Of_So" target="_blank"><img src="./images/sugar-baby.png" class="thumbnail"></a>
         <p style="margin: 0;">Maroon Bieber - Sugar Baby</p>
         <p style="font-size: 12px; margin-top: 7px;">Maroon 5 - "Sugar" +<br>Justin Bieber - "Baby"</p>
       </div>
       <span id="dots"></span>
       <span id="more" style="display: none;">
-        <br><div style="display: inline-block; vertical-align: top;">
+        <div class="mashup">
           <a href="https://youtu.be/lTwcWKVC8QU" target="_blank"><img src="./images/airplanes2.png" class="thumbnail"></a>
           <p style="margin: 0;">Airplanes but B.o.B forgets how to rap</p>
           <p style="font-size: 12px; margin-top: 7px;">B.o.B - "Airplanes" w/o rhymes</p>
         </div>
-        <div style="display: inline-block;">
+        <div class="mashup">
           <a href="https://youtu.be/CP5KHoJsUAM" target="_blank"><img src="./images/coffinlovania.png" class="thumbnail"></a>
           <p style="margin: 0;">Coffinlovania</p>
           <p style="font-size: 12px; margin-top: 7px;">Toby Fox - "MEGALOVANIA" +<br>Vicetone - "Astronomia" (AKA "Coffin Dance")</p>
         </div>
-        <div style="display: inline-block;">
+        <div class="mashup">
           <a href="https://youtu.be/J7XOXM6dh4o" target="_blank"><img src="./images/thank-u-stranger.png" class="thumbnail"></a>
           <p style="margin: 0;">Ariana Smith - Thank U, Stranger</p>
           <p style="font-size: 12px; margin-top: 7px;">Ariana Grande - "thank u, next" +<br>Sam Smith - "Dancing With A Stranger"</p>
         </div>
-        <br>
-        <div style="display: inline-block;">
+        <div class="mashup">
           <a href="https://youtu.be/N5I-ZPWLMWs" target="_blank"><img src="./images/exploded-wrong-server.png" class="thumbnail"></a>
           <p style="margin: 0;">You Exploded in the Wrong Server</p>
           <p style="font-size: 12px; margin-top: 7px;">CaptainSparklez - "Revenge" +<br>glue70 - "Casin"</p>
         </div>
-        <div style="display: inline-block;">
+        <div class="mashup">
           <a href="https://youtu.be/xy4Q-fyMIqA" target="_blank"><img src="./images/helloser.png" class="thumbnail"></a>
           <p style="margin: 0;">Helloser</p>
           <p style="font-size: 12px; margin-top: 7px;">Adele - "Hello" +<br>The Chainsmokers - "Closer"</p>
         </div>
-        <div style="display: inline-block; vertical-align: top;">
+        <div class="mashup">
           <a href="https://youtu.be/tHjH67QSiiI" target="_blank"><img src="./images/horses-in-the-back.png" class="thumbnail"></a>
           <p style="margin: 0;">Horses in the Back</p>
           <p style="font-size: 12px; margin-top: 7px;">Lil Nas X - "Old Town Road" w/ vocal splicing</p>
         </div>
-        <br><div style="display: inline-block; vertical-align: top;">
+        <div class="mashup">
           <a href="https://youtu.be/_qc1kaFewv4" target="_blank"><img src="./images/ladies-resposted-wrong.png" class="thumbnail"></a>
           <p style="margin: 0;">ladies and gentlemen, we<br>reposted in the wrong neighborhood</p>
           <p style="font-size: 12px; margin-top: 7px;">Breakbot - "Baby I'm Yours" +<br>Eminem - "Shake That"</p>
         </div>
-        <div style="display: inline-block;">
+        <div class="mashup">
           <a href="https://youtu.be/BHdeS26htw4" target="_blank"><img src="./images/night-sky.png" class="thumbnail"></a>
           <p style="margin: 0;">Night Sky</p>
           <p style="font-size: 12px; margin-top: 7px;">Nicki Minaj - "Starships" +<br>B.o.B - "Airplanes" +<br>Bag Raiders - "Shooting Stars" +<br>Owl City - "Fireflies" +<br>OneRepublic - "Counting Stars"</p>
