--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <a href="/more"><div class="sb-box" style="background-color: #cdd094;">More</div></a>
     </div>
     <div class="sidebar2">
+      <a href="/news#upcoming"><div class="sb-box" style="background-color: #b3b3b3;">Future Releases</div></a>
       <a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><div class="sb-box" style="background-color: #947771;">Springtime</div></a>
       <a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><div class="sb-box" style="background-color: #0a0a07; color: white;">You're Gone</div></a>
       <a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><div class="sb-box" style="background-color: #888682;">Rain (Demo)</div></a>
@@ -66,6 +67,7 @@
         </div>
         <p class="write-date">Sep 15, 2008</p>
       </div>
+      <br><p class="key"><b class="key-title"><u>KEY</u></b><br>★★★★★ - Official Release<br>★★★★☆ - Unofficial Release<br>★★★☆☆ - Glorified Demo<br>★★☆☆☆ - Demo<br>★☆☆☆☆ - Unfinished Idea</p>
       <div id="mc_embed_shell">
         <div id="mc_embed_signup">
           <form action="https://rhyswilliamsmusic.us11.list-manage.com/subscribe/post?u=83ae690584ca2311238b9198b&amp;id=7cc8367d50&amp;f_id=005c19e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
