Added "Future Releases" tab

--- a/more/index.html
+++ b/more/index.html
@@ -20,6 +20,7 @@
       <a href="/more"><div class="sb-box" style="background-color: #cdd094;">More</div></a>
     </div>
     <div class="sidebar2">
+      <a href="/news#upcoming"><div class="sb-box" style="background-color: #b3b3b3;">Future Releases</div></a>
       <a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><div class="sb-box" style="background-color: #947771;">Springtime</div></a>
       <a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><div class="sb-box" style="background-color: #0a0a07; color: white;">You're Gone</div></a>
       <a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><div class="sb-box" style="background-color: #888682;">Rain (Demo)</div></a>
