--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <p class="write-date">Sep 15, 2008</p>
       </div>
-      <br><p class="key"><b class="key-title"><u>KEY</u></b><br>★★★★★ - Official Release<br>★★★★☆ - Unofficial Release<br>★★★☆☆ - Glorified Demo<br>★★☆☆☆ - Demo<br>★☆☆☆☆ - Unfinished Idea</p>
+      <br><div class="key"><b><u>KEY</u></b><br>★★★★★ - Official Release<br>★★★★☆ - Unofficial Release<br>★★★☆☆ - Glorified Demo<br>★★☆☆☆ - Demo<br>★☆☆☆☆ - Unfinished Idea</div>
       <div id="mc_embed_shell">
         <div id="mc_embed_signup">
           <form action="https://rhyswilliamsmusic.us11.list-manage.com/subscribe/post?u=83ae690584ca2311238b9198b&amp;id=7cc8367d50&amp;f_id=005c19e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
