--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="sidebar2">
       <a href="/news#upcoming"><div class="sb-box" style="background-color: #b3b3b3;">Future Releases</div></a>
       <a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><div class="sb-box" style="background-color: #947771;">Springtime</div></a>
+      <a href="https://rhyswilliams.bandcamp.com/track/my-heart-is-far" target="_blank"><div class="sb-box" style="background-color: #717560; color: white;">My Heart Is Far</div></a>
       <a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><div class="sb-box" style="background-color: #0a0a07; color: white;">You're Gone</div></a>
       <a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><div class="sb-box" style="background-color: #888682;">Rain (Demo)</div></a>
     </div>
@@ -42,6 +43,18 @@
           <p>#092</p>
         </div>
         <p class="write-date">Aug 28, 2017</p>
+      </div>
+      <div class="song-box">
+        <br><a href="/images/my-heart-is-far.jpg" target="_blank"><img src="/images/my-heart-is-far.jpg" class="song-icon"></a>
+        <br><a href="https://rhyswilliams.bandcamp.com/track/my-heart-is-far" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
+        <!--<a href="https://soundcloud.com/rhyswilliams/youre-gone" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
+        <a href="https://youtu.be/mKC6StyvP3s" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>-->
+        <div class="song-box-info">
+          <p>My Heart Is Far</p>
+          <p>★★★☆☆</p>
+          <p>#054</p>
+        </div>
+        <p class="write-date">Sep 20, 2015</p>
       </div>
       <div class="song-box">
         <br><a href="/images/youre-gone.jpg" target="_blank"><img src="/images/youre-gone.jpg" class="song-icon"></a>
